--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -25,4 +25,4 @@ jobs:
       with:
        context: 
        push: true
-       tags: lmara/juice-shop-hmp:latest
+       tags: lmarahmp/juice-shop-hmp:latest
