--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -18,7 +18,7 @@ jobs:
       uses: docker/login-action@v3
       with:
        username: ${{ variables.DOCKERHUB_USERNAME }}
-       password: ${{ variable.DOCKERHUB_TOKEN }}
+       password: ${{ variables.DOCKERHUB_TOKEN }}
 
     - name: Build and push to dockerhub
       uses: docker/build-push-action@v5
