--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Login to dockerhub
       uses: docker/login-action@v3
       with:
-       username: ${{ variables.DOCKERHUB_USERNAME }}
-       password: ${{ variables.DOCKERHUB_TOKEN }}
+       username: $DOCKERHUB_USERNAME
+       password: $DOCKERHUB_TOKEN
 
     - name: Build and push to dockerhub
       uses: docker/build-push-action@v5
